--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -1,244 +1,250 @@
 /* About Page */
 #about-details {
-	padding: 4em 0;
-	.container {
-		.image-wrapper {
-			width: 40%;
-			img {
-				width: 100%;
-				height: auto;
-				object-fit: contain;
-			}
-		}
-		.content {
-			width: 55%;
-			h5 {
-				color: var(--secondary-accent-color);
-			}
-			.values {
-				.value {
-					width: 45%;
-					img {
-						width: 97px;
-						height: 82px;
-					}
-					h6 {
-						font-size: 24px;
-						font-weight: 700;
-						line-height: 27.6px;
-						color: var(--secondary-accent-color);
-					}
-				}
-			}
-		}
-	}
+  padding: 4em 0;
+  .container {
+    .image-wrapper {
+      width: 40%;
+      img {
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+      }
+    }
+    .content {
+      width: 55%;
+      h5 {
+        color: var(--secondary-accent-color);
+      }
+      .values {
+        .value {
+          width: 45%;
+          img {
+            width: 97px;
+            height: 82px;
+          }
+          h6 {
+            font-size: 24px;
+            font-weight: 700;
+            line-height: 27.6px;
+            color: var(--secondary-accent-color);
+          }
+        }
+      }
+    }
+  }
 }
 
 #core-values {
-	position: relative;
-	padding: 3em 0;
-	.bg-image {
-		z-index: 0;
-		object-fit: cover;
-	}
-	.overlay {
-		background-color: var(--primary-accent-color);
-		opacity: 0.8;
-		z-index: 1;
-	}
-	.container {
-		* {
-			z-index: 3;
-		}
-		color: var(--background-color);
-		.values-grid {
-			width: 100%;
-			border-bottom: 0.5px solid #ffffff66;
-			padding-bottom: 1.5em;
-			&:last-of-type {
-				border-bottom: 0;
-			}
-			.value {
-				border-right: 0.5px solid #ffffff66;
-				span {
-					font-size: 100px; /* Adjust size as needed */
-					line-height: 100px;
-					font-weight: bold;
-					color: #e2241aef; /* Inside text color */
-					text-shadow: -5px -5px 0 #fff, /* Top left */ 5px -5px 0 #fff,
-						/* Top right */ -5px 5px 0 #fff, /* Bottom left */ 5px 5px 0 #fff,
-						/* Bottom right */ 0 -5px 0 #fff, /* Top center */ 0 5px 0 #fff,
-						/* Bottom center */ -5px 0 0 #fff, /* Left center */ 5px 0 0 #fff; /* Right center */
-				}
-				&:last-of-type {
-					border-right: 0;
-				}
-				p {
-					margin-top: 0.4em;
-					font-size: 20px;
-					font-weight: 700;
-					line-height: 23px;
-					text-align: center;
-				}
-			}
-		}
-	}
+  position: relative;
+  padding: 3em 0;
+
+  .bg-image {
+    z-index: 0;
+    object-fit: cover;
+  }
+
+  .overlay {
+    background-color: var(--primary-accent-color);
+    opacity: 0.8;
+    z-index: 1;
+  }
+
+  .container {
+    * {
+      z-index: 3;
+    }
+    color: var(--background-color);
+
+    .values-grid {
+      width: 100%;
+      border-bottom: 0.5px solid #ffffff66;
+      padding-bottom: 1.5em;
+
+      &:last-of-type {
+        border-bottom: 0;
+      }
+
+      .value {
+        border-right: 0.5px solid #ffffff66;
+
+        .value-letter {
+          width: 100px;
+          height: 100px;
+          font-size: 100px;
+          font-weight: bold;
+          font-family: inherit; /* Match your site's font */
+        }
+
+        &:last-of-type {
+          border-right: 0;
+        }
+
+        p {
+          margin-top: 0.4em;
+          font-size: 20px;
+          font-weight: 700;
+          line-height: 23px;
+          text-align: center;
+        }
+      }
+    }
+  }
 }
 
 #approach {
-	min-height: 545px;
-	.image-wrapper {
-		height: 100%;
-		width: 100%;
-		img {
-			height: 100%;
-			width: 100%;
-			object-fit: cover;
-		}
-	}
+  min-height: 545px;
+  .image-wrapper {
+    height: 100%;
+    width: 100%;
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
 
-	.content {
-		padding: 0 3.5em;
-		h5 {
-			color: var(--secondary-accent-color);
-		}
-		a {
-			background-color: var(--primary-accent-color);
-			color: var(--background-color);
-		}
-	}
+  .content {
+    padding: 0 3.5em;
+    h5 {
+      color: var(--secondary-accent-color);
+    }
+    a {
+      background-color: var(--primary-accent-color);
+      color: var(--background-color);
+    }
+  }
 }
 
 /* Responsive layout for Mobile devices */
 @media (max-width: 768px) {
-	#about-details {
-		padding: 2em 0;
-		.container {
-			.image-wrapper {
-				width: 100%;
-				img {
-					width: 100%;
-					height: 300px;
-					object-fit: cover;
-				}
-			}
-			.content {
-				width: 100%;
-				margin-top: 2em;
-				.values {
-					.value {
-						width: 100%;
-						img {
-							width: 97px;
-							height: 82px;
-						}
-						h6 {
-							font-size: 22px;
-							line-height: 27.6px;
-						}
-					}
-				}
-			}
-		}
-	}
-	#core-values {
-		padding: 2em 0;
-		.container {
-			.values-grid {
-				width: 100%;
-				border: 0;
-				padding-bottom: 1em;
-				.value {
-					border-right: 0;
-					border: 0;
-					span {
-						font-size: 60px; /* Adjust size as needed */
-						line-height: 60px;
-					}
-					p {
-						font-size: 16px;
-					}
-				}
-			}
-		}
-	}
-	#approach {
-		min-height: auto;
-		height: auto;
-		.image-wrapper {
-			height: 300px;
-			width: 100%;
-		}
+  #about-details {
+    padding: 2em 0;
+    .container {
+      .image-wrapper {
+        width: 100%;
+        img {
+          width: 100%;
+          height: 300px;
+          object-fit: cover;
+        }
+      }
+      .content {
+        width: 100%;
+        margin-top: 2em;
+        .values {
+          .value {
+            width: 100%;
+            img {
+              width: 97px;
+              height: 82px;
+            }
+            h6 {
+              font-size: 22px;
+              line-height: 27.6px;
+            }
+          }
+        }
+      }
+    }
+  }
+  #core-values {
+    padding: 2em 0;
+    .container {
+      .values-grid {
+        width: 100%;
+        border: 0;
+        padding-bottom: 1em;
+        .value {
+          border-right: 0;
+          border: 0;
+          span {
+            font-size: 60px; /* Adjust size as needed */
+            line-height: 60px;
+          }
+          p {
+            font-size: 16px;
+          }
+        }
+      }
+    }
+  }
+  #approach {
+    min-height: auto;
+    height: auto;
+    .image-wrapper {
+      height: 300px;
+      width: 100%;
+    }
 
-		.content {
-			padding: 2em 1.5em;
-		}
-	}
+    .content {
+      padding: 2em 1.5em;
+    }
+  }
 }
 
 /* Responsive layout for tablet devices */
 @media (max-width: 1024px) {
-	#about-details {
-		padding: 2em 0;
-		.container {
-			.image-wrapper {
-				width: 100%;
-				img {
-					width: 100%;
-					height: 300px;
-					object-fit: cover;
-				}
-			}
-			.content {
-				width: 100%;
-				margin-top: 2em;
-				.values {
-					.value {
-						width: 100%;
-						img {
-							width: 97px;
-							height: 82px;
-						}
-						h6 {
-							font-size: 22px;
-							line-height: 27.6px;
-						}
-					}
-				}
-			}
-		}
-	}
-	#core-values {
-		padding: 2em 0;
-		.container {
-			.values-grid {
-				width: 100%;
-				border: 0;
-				padding-bottom: 1em;
-				.value {
-					border-right: 0;
-					border: 0;
-					span {
-						font-size: 60px; /* Adjust size as needed */
-						line-height: 60px;
-					}
-					p {
-						font-size: 16px;
-					}
-				}
-			}
-		}
-	}
-	#approach {
-		min-height: auto;
-		height: auto;
-		.image-wrapper {
-			height: 300px;
-			width: 100%;
-		}
+  #about-details {
+    padding: 2em 0;
+    .container {
+      .image-wrapper {
+        width: 100%;
+        img {
+          width: 100%;
+          height: 300px;
+          object-fit: cover;
+        }
+      }
+      .content {
+        width: 100%;
+        margin-top: 2em;
+        .values {
+          .value {
+            width: 100%;
+            img {
+              width: 97px;
+              height: 82px;
+            }
+            h6 {
+              font-size: 22px;
+              line-height: 27.6px;
+            }
+          }
+        }
+      }
+    }
+  }
+  #core-values {
+    padding: 2em 0;
+    .container {
+      .values-grid {
+        width: 100%;
+        border: 0;
+        padding-bottom: 1em;
+        .value {
+          border-right: 0;
+          border: 0;
+          span {
+            font-size: 60px; /* Adjust size as needed */
+            line-height: 60px;
+          }
+          p {
+            font-size: 16px;
+          }
+        }
+      }
+    }
+  }
+  #approach {
+    min-height: auto;
+    height: auto;
+    .image-wrapper {
+      height: 300px;
+      width: 100%;
+    }
 
-		.content {
-			padding: 2em 1.5em;
-		}
-	}
+    .content {
+      padding: 2em 1.5em;
+    }
+  }
 }
