--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,21 @@ body {
   font-family: "Open Sans", sans-serif;
   //font-family: Arial, sans-serif;
 }
+body.no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+/* For modern browsers that support scrollbar-gutter */
+@supports (scrollbar-gutter: stable) {
+  body.no-scroll {
+    overflow: hidden;
+    position: static;
+    scrollbar-gutter: stable;
+  }
+}
 
 ::-webkit-scrollbar {
   width: 8px;
@@ -280,6 +295,9 @@ header {
             font-weight: 700;
             color: var(--foreground-color);
           }
+          a.active {
+            color: var(--secondary-accent-color) !important;
+          }
           &:last-of-type {
             margin-right: 0;
           }
@@ -330,12 +348,15 @@ header {
                 color: var(--background-color);
                 white-space: nowrap;
               }
+              a.active {
+                color: var(--secondary-accent-color) !important;
+              }
               &:last-of-type {
                 margin-bottom: 0;
               }
               &:hover {
                 border: none !important;
-                background-color: var(--secondary-accent-color);
+                background-color: var(--primary-accent-color);
               }
             }
           }
